--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>สวัสดีเด้อพี่น้องงงงง ผมคือบีม</h1>
 </header>
 
+<div class="container">
+    <p>ผมชื่อชนกันต์ นามสกุล ทุมมา ชอบเขียนโค้ดเล่นยามว่าง (มี Vibe Codeบ้างเป็นระยะ ) และเล่นเกม ดูหนัง ดูอนิเมะ</p>
+</div>
 </body>
 </html>
