--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 <div class="container">
     <p>ผมชื่อชนกันต์ นามสกุล ทุมมา ชอบเขียนโค้ดเล่นยามว่าง (มี Vibe Codeบ้างเป็นระยะ ) และเล่นเกม ดูหนัง ดูอนิเมะ</p>
 </div>
+
+<footer>
+    © 2025 ชนกันต์ นามสกุล ทุมมา
+</footer>
+
 </body>
 </html>
