add Contact List

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <div class="container">
     <p>ผมชื่อชนกันต์ นามสกุล ทุมมา ชอบเขียนโค้ดเล่นยามว่าง (มี Vibe Codeบ้างเป็นระยะ ) และเล่นเกม ดูหนัง ดูอนิเมะ</p>
+
+    <h2>ติดต่อผม</h2>
+    <p>Email: cnk@outlook.co.th (ของสมมุตินะ)</p>
+    <p>Facebook: <a href="">ไม่ให้หรอก</a></p>
 </div>
 
 <footer>
