add Profile Picture

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </header>
 
 <div class="container">
+    <img src="p1.png" alt="profile" class="profile">
+    
+    <h2>เกี่ยวกับผมหรอ ?</h2>
     <p>ผมชื่อชนกันต์ นามสกุล ทุมมา ชอบเขียนโค้ดเล่นยามว่าง (มี Vibe Codeบ้างเป็นระยะ ) และเล่นเกม ดูหนัง ดูอนิเมะ</p>
 
     <h2>ติดต่อผม</h2>
