feat: add print to pdf functionality using vanilla JS

--- a/resume.html
+++ b/resume.html
@@ -122,5 +122,15 @@
             </section>
         </main>
     </div>
+    <button class="action-btn" onclick="downloadPDF()">
+        <i class="fas fa-print"></i> พิมพ์ / บันทึก PDF
+    </button>
+
+    <script>
+        function downloadPDF() {
+            window.print();
+        }
+        console.log("Resume Loaded Successfully");
+    </script>
 </body>
 </html>
