--- a/education.html
+++ b/education.html
@@ -6,6 +6,65 @@
     <title>Education History</title>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        :root {
+            --primary-color: #2c3e50;
+            --accent-color: #3498db;
+            --bg-color: #f4f7f6;
+            --white: #ffffff;
+            --text-color: #333;
+        }
+
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: 'Sarabun', sans-serif; background-color: var(--bg-color); color: var(--text-color); }
+
+        /* Navbar Style */
+        .navbar {
+            background: var(--primary-color); color: var(--white);
+            padding: 15px 20px; display: flex; align-items: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 100;
+        }
+        .back-link { color: var(--white); text-decoration: none; font-weight: 600; margin-right: 20px; transition: 0.3s; }
+        .back-link:hover { color: var(--accent-color); }
+        .navbar h2 { font-size: 1.2rem; }
+
+        /* Container */
+        .container { max-width: 800px; margin: 40px auto; padding: 0 20px; }
+
+        /* Education Card */
+        .edu-card {
+            background: var(--white); border-radius: 10px;
+            padding: 30px; margin-bottom: 25px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            border-left: 5px solid var(--accent-color);
+            transition: transform 0.2s;
+        }
+        .edu-card:hover { transform: translateY(-5px); }
+
+        /* Header Section inside Card */
+        .edu-header { display: flex; align-items: flex-start; gap: 20px; margin-bottom: 20px; }
+        .edu-icon {
+            font-size: 2.5rem; color: var(--accent-color);
+            background: #eaf6ff; width: 60px; height: 60px;
+            display: flex; align-items: center; justify-content: center;
+            border-radius: 50%;
+        }
+        .edu-info h3 { font-size: 1.3rem; color: var(--primary-color); margin-bottom: 5px; }
+        .school-name { color: #666; font-weight: 500; }
+        .year-badge {
+            display: inline-block; background: #eee; color: #555;
+            padding: 4px 12px; border-radius: 20px; font-size: 0.8rem; margin-top: 8px;
+        }
+
+        /* Coursework Tags */
+        .coursework { margin-top: 20px; border-top: 1px solid #eee; padding-top: 15px; }
+        .coursework h4 { font-size: 1rem; margin-bottom: 10px; color: var(--primary-color); }
+        .tag-list { list-style: none; display: flex; flex-wrap: wrap; gap: 10px; }
+        .tag-list li {
+            background: #eef2f7; color: var(--primary-color);
+            padding: 5px 15px; border-radius: 5px; font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
 
